# hs-highlight

./: .highlightError.cabal.swp  CHANGELOG.md  LICENSE  README.md  highlight.cabal  highlightError.cabal  hs-highlight.cabal
src/: Highlight.hs  HighlightError.hs
test/: Main.hs
