cabal-version:      3.0
name:               hs-highlight
version:            1.0.5
synopsis:           A tool to highlight terminal strings
description:        highlight is a Haskell library that provides functionality to highlight anything in code snippets. It aims to improve readability and debugging by visually emphasizing problematic areas in source code.
license:            MIT
license-file:       LICENSE
author:             Lorenzobattistela
maintainer:         lorenzobattistela@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
homepage:           https://github.com/Lorenzobattistela/hs-highlight
bug-reports:        https://github.com/Lorenzobattistela/hs-highlight/issues
tested-with:        GHC == 9.2.8, GHC == 9.4.7, GHC == 9.6.3, GHC == 9.12.1

source-repository head
  type:     git
  location: https://github.com/Lorenzobattistela/hs-highlight.git

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Highlight
    build-depends:    base >= 4.14 && < 5
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
